--- a/web_react/package.json
+++ b/web_react/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@grpc/grpc-js": "^1.12.4",
+    "@grpc/proto-loader": "^0.7.13",
     "@mui/material": "^6.1.10",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
