ルーティングを修正し、ログインページを追加。依存関係を更新し、VSCodeの設定を追加。

--- a/web_react/package.json
+++ b/web_react/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@grpc/grpc-js": "^1.12.4",
     "@grpc/proto-loader": "^0.7.13",
-    "@mui/material": "^6.1.10",
+    "@mui/material": "^6.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "typescript": "^5.7.2",
     "web-vitals": "^4.2.4"
