--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,15 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "type": "chrome",
-        "request": "launch",
-        "name": "React",
-        "url": "http://localhost:3000",
-        "webRoot": "${workspaceFolder}/web_react/src",
-        "sourceMaps": true,
-        "trace": true
-      }
-    ]
-  }
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "React",
+      "preLaunchTask": "start-react",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}/web_react/src",
+      "sourceMaps": true,
+      "trace": true
+    }
+  ]
+}
